tests/fixtures/invalid/domain_field_on_bool.gcl
// domain_field_on_bool.gcl -- field constraint on unsupported type
type Foo {
    Foo(x: Bool(min: 0.0)),
}
